--- a/Areas/Admin/Views/RoleManagement/Edit.cshtml
+++ b/Areas/Admin/Views/RoleManagement/Edit.cshtml
@@ -70,7 +70,7 @@
     <script type="text/javascript">
         $(document).ready(function () {
             $('.checkbox_wrapper').on('click', function () {
-                $(this).parents('.panel-info').find('.checkbox_childrent').prop('checked', $(this).prop('checked'));
+                $(this).parents('.panel-danger').find('.checkbox_childrent').prop('checked', $(this).prop('checked'));
             })
 
             $('#select_all').click(function (event) {
