--- a/Areas/Admin/Views/RoleManagement/RoleIndex.cshtml
+++ b/Areas/Admin/Views/RoleManagement/RoleIndex.cshtml
@@ -42,7 +42,7 @@
                                 </div>
                                 <div class="col-md-6">
                                     <label>Description</label>
-                                    <input id="Role_Description" class="form-control" placeholder="Phone">
+                                    <input id="Role_Description" class="form-control" placeholder="Description">
                                 </div>
                             </div>
                         </div>
@@ -171,6 +171,10 @@
     <style>
         td {
             background-color: #172b4d;
+
+        }
+        th {
+            color: #4d7bca
         }
     </style>
 }
