--- a/Areas/Admin/Views/Shared/_MainLayout.cshtml
+++ b/Areas/Admin/Views/Shared/_MainLayout.cshtml
@@ -83,6 +83,9 @@
         function _Authorize() {
             $(location).attr("href", "/Admin/RoleManagement/RoleIndex");
         }
+        function _UserManagement() {
+            $(location).attr("href", "/Admin/UserManagement/UserIndex");
+        }
     </script>
     @RenderSection("js", false)
 </body>
