--- a/Areas/Admin/Views/UserManagement/Add.cshtml
+++ b/Areas/Admin/Views/UserManagement/Add.cshtml
@@ -1,8 +1,6 @@
 ﻿@model _ExcellOn_.Models.UserInFo
 @{ Layout = "~/Areas/Admin/Views/Shared/_MainLayout.cshtml"; }
 
-@if (Model.User_Name != null && Model.User_Password != null)
-{
 <div class="main-content">
 
     <div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center" style="min-height: 600px; background-image: url(https://www.makemyassignments.com/blog/wp-content/uploads/2019/08/business-communication-tools-1024x574.png); background-size: cover; background-position: center top;">
@@ -10,7 +8,7 @@
         <div class="container-fluid d-flex align-items-center">
             <div class="row">
                 <div class="col-lg-7 col-md-10">
-                    <h1 class="display-2 text-white">Hello @Model.User_Name</h1>
+                    <h1 class="display-2 text-white">Hello </h1>
                     <p class="text-white mt-0 mb-5">This is your profile page. You can see the progress you've made with your work and manage your projects or assigned tasks</p>
                 </div>
             </div>
@@ -24,7 +22,7 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-3 order-lg-2">
                             <div class="card-profile-image">
-                                <img src="@Url.Content(Model.User_Avatar)" class="rounded-circle" />
+                                <img src="" class="rounded-circle" />
                             </div>
                         </div>
                     </div>
@@ -38,15 +36,15 @@
                             <div class="col">
                                 <div class="card-profile-stats d-flex justify-content-center mt-md-5">
                                     <div>
-                                        <span class="heading">22</span>
-                                        <span class="description">Friends</span>
+                                        <span class="heading"></span>
+                                        <span class="description">My Age</span>
                                     </div>
                                     <div>
-                                        <span class="heading">10</span>
+                                        <span class="heading"></span>
                                         <span class="description">Photos</span>
                                     </div>
                                     <div>
-                                        <span class="heading">89</span>
+                                        <span class="heading"></span>
                                         <span class="description">Comments</span>
                                     </div>
                                 </div>
@@ -54,19 +52,19 @@
                         </div>
                         <div class="text-center">
                             <h3>
-                                @Model.User_FullName<span class="font-weight-light">, @Model.User_Age</span>
+                                <span class="font-weight-light"></span>
                             </h3>
                             <div class="h5 font-weight-300">
-                                <i class="ni location_pin mr-2"></i>@Model.User_Address
+                                <i class="ni location_pin mr-2"></i>
                             </div>
                             <div class="h5 mt-4">
-                                <i class="ni business_briefcase-24 mr-2"></i>@Model.User_Email
+                                <i class="ni business_briefcase-24 mr-2"></i>
                             </div>
                             <div>
-                                <i class="ni education_hat mr-2"></i>@Model.User_Phone
+                                <i class="ni education_hat mr-2"></i>
                             </div>
                             <hr class="my-4">
-                            <p>@Model.User_AboutMe</p>
+                            <p></p>
 
                         </div>
                     </div>
@@ -77,13 +75,13 @@
                     <div class="card-header bg-white border-0">
                         <div class="row align-items-center">
                             <div class="col-8">
-                                <h3 class="mb-0">My Account</h3>
+                                <h3 class="mb-0">New Account</h3>
                             </div>
 
                         </div>
                     </div>
                     <div class="card-body">
-                        <form action="/Admin/UserManagement/Update_Profile" method="post" enctype="multipart/form-data">
+                        <form action="/Admin/StaffManagement/Add" method="post" enctype="multipart/form-data">
                             <h6 class="heading-small text-muted mb-4">User information</h6>
                             <div class="pl-lg-4">
                                 <div class="row">
@@ -100,7 +98,7 @@
                                     <div class="col-lg-6">
                                         <div class="form-group focused">
                                             <label class="form-control-label" for="input-username">Username</label>
-                                            <input type="text" name="User_Name" readonly class="form-control form-control-alternative" value="@Model.User_Name">
+                                            <input type="text" name="User_Name" class="form-control form-control-alternative">
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
@@ -114,13 +112,13 @@
                                     <div class="col-lg-6">
                                         <div class="form-group focused">
                                             <label class="form-control-label" for="input-city">Age</label>
-                                            <input type="number" name="User_Age" class="form-control form-control-alternative" value="@Model.User_Age">
+                                            <input type="number" name="User_Age" class="form-control form-control-alternative">
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="form-group focused">
                                             <label class="form-control-label" for="input-last-name">Full Name</label>
-                                            <input type="text" name="User_FullName" class="form-control form-control-alternative" value="@Model.User_FullName">
+                                            <input type="text" name="User_FullName" class="form-control form-control-alternative">
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
@@ -128,11 +126,11 @@
                                             <label class="form-control-label" style="margin-bottom: 20px" for="input-address">Gender</label>
                                             <div>
                                                 <span style="margin-right: 150px">
-                                                    <input @(Model.User_Gender == 0 ? "checked" : "") type="radio" name="User_Gender" value="0">
+                                                    <input type="radio" name="User_Gender" value="0">
                                                     <label class="form-control-label" for="input-last-name">Male</label>
                                                 </span>
                                                 <span>
-                                                    <input @(Model.User_Gender == 1 ? "checked" : "") type="radio" name="User_Gender" value="1">
+                                                    <input type="radio" name="User_Gender" value="1">
                                                     <label class="form-control-label" for="input-last-name">Female</label><br>
                                                 </span>
                                             </div>
@@ -144,7 +142,8 @@
                                             <select name="ServiceId" class="form-control form-control-alternative">
                                                 @foreach (var item in ViewBag.list_role)
                                                 {
-                                <option value="@item.Id">@item.Role_Name</option>}
+                                                    <option value="@item.Id">@item.Role_Name</option>
+                                                }
                                             </select>
 
                                         </div>
@@ -152,7 +151,7 @@
                                     <div class="col-md-12">
                                         <div class="form-group focused">
                                             <label class="form-control-label" for="input-address">About Me</label>
-                                            <textarea name="User_AboutMe" class="form-control form-control-alternative" rows="10">@Model.User_AboutMe</textarea>
+                                            <textarea name="User_AboutMe" class="form-control form-control-alternative" rows="10"></textarea>
                                         </div>
                                     </div>
                                 </div>
@@ -164,7 +163,7 @@
                                     <div class="col-md-12">
                                         <div class="form-group focused">
                                             <label class="form-control-label" for="input-address">Address</label>
-                                            <input name="User_Address" class="form-control form-control-alternative" value="@Model.User_Address" type="text">
+                                            <input name="User_Address" class="form-control form-control-alternative" type="text">
                                         </div>
                                     </div>
                                 </div>
@@ -172,13 +171,13 @@
                                     <div class="col-lg-6">
                                         <div class="form-group focused">
                                             <label class="form-control-label" for="input-first-name">Email Address</label>
-                                            <input type="text" name="User_Email" class="form-control form-control-alternative" value="@Model.User_Email">
+                                            <input type="text" name="User_Email" class="form-control form-control-alternative">
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="form-group focused">
                                             <label class="form-control-label" for="input-country">Telephone</label>
-                                            <input type="text" name="User_Phone" class="form-control form-control-alternative" value="@Model.User_Phone">
+                                            <input type="text" name="User_Phone" class="form-control form-control-alternative">
                                         </div>
                                     </div>
                                 </div>
@@ -187,7 +186,7 @@
 
                             <div class="pl-lg-4">
                                 <div class="form-group focused">
-                                    <button type="submit" class="btn btn-info">Edit profile</button>
+                                    <button type="submit" class="btn btn-info">Submit</button>
                                 </div>
                             </div>
                         </form>
@@ -197,13 +196,12 @@
         </div>
     </div>
 </div>
-                <footer class="footer">
-                    <div class="row align-items-center justify-content-xl-between">
-                        <div class="col-xl-6 m-auto text-center">
-                            <div class="copyright">
+<footer class="footer">
+    <div class="row align-items-center justify-content-xl-between">
+        <div class="col-xl-6 m-auto text-center">
+            <div class="copyright">
 
-                            </div>
-                        </div>
-                    </div>
-                </footer>
-}
+            </div>
+        </div>
+    </div>
+</footer>
