--- a/Areas/Admin/Views/Shared/_TopnavLayout.cshtml
+++ b/Areas/Admin/Views/Shared/_TopnavLayout.cshtml
@@ -121,17 +121,17 @@
                         <div class="dropdown-header noti-title">
                             <h6 class="text-overflow m-0">Welcome!</h6>
                         </div>
-                        <a class="dropdown-item">
+                        <a class="dropdown-item" onclick="return _Profile()">
                             <i class="ni ni-single-02"></i>
-                            <span onclick="return _Profile()">My profile</span>
+                            <span>My profile</span>
                         </a>
-                        <a class="dropdown-item">
+                        <a class="dropdown-item" onclick="return _Authorize()">
                             <i class="ni ni-settings-gear-65"></i>
-                            <span onclick="return _Authorize()">Authorize</span>
+                            <span >Department</span>
                         </a>
-                        <a class="dropdown-item">
+                        <a class="dropdown-item" onclick="return _UserManagement()">
                             <i class="ni ni-calendar-grid-58"></i>
-                            <span>Activity</span>
+                            <span>User Management</span>
                         </a>
                         <a class="dropdown-item">
                             <i class="ni ni-support-16"></i>
